# LLM-RAG-pipeline

./: README.md
CHATBOT/: pyproject.toml  requirement.txt
CHATBOT/data/txt_files/: file1.txt  file2.txt
CHATBOT/data/vectore/: chroma.sqlite3
CHATBOT/notebook/: main.py
